maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:48: error: missing arguments for method getIndication in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
			if (getIndication == num) markAround(i,j)
                            ^