maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
var xBaggle = 0
var yBaggle = 0
for (i <- 0 to getMondeLargeur-1) {
	for (j <- 0 to getMondeHauteur-1) {
		if (aBiscuit(i,j)) {
			xBaggle = i
			yBaggle = j
		}
	}
}

def fini() :Boolean ={
	for (i <- 0 to getMondeLargeur-1) {
		for (j <- 0 to getMondeHauteur-1) {
			if (getIndication(i,j)==9999) return false
		}
	}
	return true
}

setIndication(xBaggle,yBaggle,0)

def markAround(x:Int,y:Int) ={
	var indic = getIndication(x,y) + 1
	if (!aMurNord(x,y)) {
		if (y != 0) setIndication(x,y-1,indic)
	}
	if (!aMurOuest(x,y)) {
		if (x != 0) setIndication(x-1,y,indic)
	}
	if (y != getMondeLargeur-1) {
		if (!aMurNord(x,y+1)) setIndication(x,y+1,indic)
	}
	if (x != getMondeHauteur-1) {
		if (!aMurOuest(x+1,y)) setIndication(x+1,y,indic)
	}
}

var x = xBaggle
var y = yBaggle
var num = -1
while (!fini) {
	num += 1
	for (i <- 0 to getMondeLargeur-1) {
		for (j <- 0 to getMondeHauteur-1) {
			if (getIndication == num) markAround(i,j)
		}
	}
}

}
